# cgp_scalc

./: CMakeLists.txt  Makefile  main.cpp  scalc.l  scalc.y
src/: CMakeLists.txt  main.cpp
src/parsing/: CMakeLists.txt  parsing.hpp  scalc.l  scalc.y  semantic.cpp  semantic.hpp
tests/: run-tests.sh
tests/parsing/: 01_trivial.expected  01_trivial.sc  02_float.expected  02_float.sc  03_precedence.expected  03_precedence.sc  04_empty-lines.expected  04_empty-lines.sc  05_comments.expected  05_comments.sc  06_type-conversion.expected  06_type-conversion.sc  07_exponent.expected  07_exponent.sc
